# UnsupervisedPairTrading

./: .gitignore  .gitmodules  data_upload.sh  getData.py  log.py  macd_trading.py  main.py  pyproject.toml  train.py
MACDTrading/: __init__.py  etfs.py  manager.py  signalcatcher.py
PairTrading/: __init__.py  features.py
PairTrading/authentication/: __init__.py  auth.py  authLoader.py  base.py
PairTrading/data/: __init__.py  features.py
PairTrading/data/fundamentals/: __init__.py  common.py  firmCharacteristics.py  fundamentalsdata.py  util.py
PairTrading/data/technicals/: __init__.py  technicals.py
PairTrading/lib/: __init__.py
PairTrading/lib/dataEngine/: __init__.py  alpacadata.py  basedata.py  eoddata.py
PairTrading/lib/tradingClient/: client.py
PairTrading/pairs/: __init__.py  cointegration.py  createpairs.py
PairTrading/pairs/entryexit/: __init__.py  model.py  optimalstopping.py  ou_mle.py
PairTrading/trading/: __init__.py  executor.py  helper.py  manager.py
PairTrading/training/: __init__.py  pipeline.py
PairTrading/util/: __init__.py  clean.py  conversion.py  kalman.py  read.py  singleton.py  write.py
authentication/: __init__.py  auth.py  authLoader.py  base.py  enums.py
config/: config.yaml  configloader.py  macd_config.yaml  model.py  pairtrading_config.yaml
lib/: __init__.py
lib/dataEngine/: __init__.py  alpacadata.py  common.py  eoddata.py
lib/patterns/: __init__.py  retry.py
lib/tradingClient/: client.py
saveddata/: cluster.csv  openedpairs.json  recently_closed.json
saveddata/pairs/: pairs.json
(+3 files in other folders)
